# mdtensor

./: .bazelrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md  make_single_header.py  mdtensor.hpp
.devcontainer/: dockerfile
.github/workflows/: single-header.yml  unit_test.yml
benchmarks/random/rand/: source.hpp
mdtensor/: mdtensor.hpp
mdtensor/core/: broadcast.hpp  convert.hpp  core.hpp  submdspan.hpp  type.hpp
mdtensor/core/eigen/: eigen.hpp
mdtensor/creation/: arange.hpp  copy.hpp  copy_like.hpp  creation.hpp  empty.hpp  empty_like.hpp  eye.hpp  fill.hpp  full.hpp  full_like.hpp  linspace.hpp  ones.hpp  ones_like.hpp  zeros.hpp  zeros_like.hpp
mdtensor/linalg/: cholesky.hpp  inv.hpp  linalg.hpp  lu.hpp  matmul.hpp  matvec.hpp  norm.hpp  solve.hpp  vecmat.hpp
mdtensor/logic/: all.hpp  allclose.hpp  any.hpp  array_equal.hpp  array_equiv.hpp  equal.hpp  greater.hpp  greater_equal.hpp  isclose.hpp  less.hpp  less_equal.hpp  logic.hpp  not_equal.hpp
mdtensor/manipulation/: concatenate.hpp  expand_dims.hpp  manipulation.hpp  reshape.hpp  transpose.hpp
mdtensor/math/: absolute.hpp  add.hpp  atan2.hpp  clip.hpp  cos.hpp  deg2rad.hpp  divide.hpp  math.hpp  max.hpp  maximum.hpp  min.hpp  minimum.hpp  multiply.hpp  negative.hpp  rad2deg.hpp  sign.hpp  sin.hpp  sqrt.hpp  subtract.hpp  sum.hpp  tan.hpp
mdtensor/random/: rand.hpp  random.hpp  uniform.hpp
mdtensor/util/: to_string.hpp  util.hpp
tests/core/broadcast/: main.cpp
tests/creation/arange/: main.cpp
tests/creation/copy/: main.cpp
tests/creation/empty/: main.cpp
tests/creation/empty_like/: main.cpp
tests/creation/eye/: main.cpp
tests/creation/fill/: main.cpp
tests/creation/full/: main.cpp
tests/creation/full_like/: main.cpp
tests/creation/linspace/: main.cpp
tests/creation/ones/: main.cpp
tests/creation/ones_like/: main.cpp
tests/creation/zeros/: main.cpp
tests/creation/zeros_like/: main.cpp
tests/linalg/cholesky/: main.cpp
tests/linalg/inv/: main.cpp
tests/linalg/lu/: main.cpp
tests/linalg/matmul/: main.cpp
tests/linalg/matvec/: main.cpp
tests/linalg/norm/: main.cpp
tests/linalg/solve/: main.cpp
tests/linalg/vecmat/: main.cpp
tests/logic/all/: main.cpp
tests/logic/allclose/: main.cpp
tests/logic/any/: main.cpp
tests/logic/array_equal/: main.cpp
tests/logic/array_equiv/: main.cpp
tests/logic/equal/: main.cpp
tests/logic/greater/: main.cpp
tests/logic/greater_equal/: main.cpp
tests/logic/isclose/: main.cpp
tests/logic/less/: main.cpp
tests/logic/less_equal/: main.cpp
tests/logic/not_equal/: main.cpp
tests/manipulation/concatenate/: main.cpp
tests/manipulation/expand_dims/: main.cpp
tests/to_string/: main.cpp
(+68 files in other folders)
